ADD - More translations

--- a/assets/translations/de-DE.json
+++ b/assets/translations/de-DE.json
@@ -20,11 +20,9 @@
   "analytics": "Analytik",
   "andFiles": "und Dateien",
   "appName": "qBitConnect",
-  "appTitle": "qBitConnect",
   "applyFilter": "Filter anwenden",
   "areYouSureDeleteServer": "Sind Sie sicher, dass Sie löschen möchten",
   "areYouSureDeleteTorrents": "Sind Sie sicher, dass Sie {count} Torrent(s) löschen möchten?",
-  "authenticationRequired": "Authentifizierung erforderlich",
   "authenticationRequiredMessage": "Diese qBittorrent-Instanz erfordert Authentifizierung. Bitte geben Sie Benutzername und Passwort an.",
   "autoTmm": "Automatisches TMM",
   "automatic": "Automatisch",
@@ -40,9 +38,7 @@
   "change": "Ändern",
   "changeLocation": "Speicherort ändern",
   "changeSaveLocation": "Speicherort ändern",
-  "checking": "Überprüft",
   "checkingConnection": "Verbindung wird überprüft...",
-  "chooseLanguage": "Sprache wählen",
   "chooseTheme": "Design wählen",
   "chooseWhatToDelete": "Wählen Sie aus, was gelöscht werden soll:",
   "collectingData": "Daten werden gesammelt...",
@@ -62,7 +58,6 @@
   "createSubfolder": "Unterordner erstellen",
   "createdBy": "Erstellt von",
   "currentFilter": "Aktueller Filter",
-  "currentlySelected": "Aktuell ausgewählt",
   "customHeaders": "Benutzerdefinierte Header",
   "customizeTorrentCard": "Torrent-Karte anpassen",
   "customizeTorrentCardInfo": "Torrent-Karten-Info anpassen",
@@ -77,27 +72,20 @@
   "deleteServer": "Server löschen",
   "deleteTorrent": "Torrent löschen",
   "deleteTorrents": "Torrents löschen",
-  "deleted": "gelöscht",
   "deletingTorrents": "Torrents werden gelöscht...",
-  "disconnect": "Trennen",
   "disconnectFirstToDelete": "Zuerst trennen, um zu löschen",
   "doNotDownload": "Nicht herunterladen",
   "dontCreateSubfolder": "Keinen Unterordner erstellen",
   "download": "Herunterladen",
-  "downloadFirstLast": "Erste und letzte Teile zuerst herunterladen",
   "downloadProgress": "Download-Fortschritt",
   "downloadLimit": "Download-Limit",
-  "downloadSequential": "In sequenzieller Reihenfolge herunterladen",
   "downloadSpeed": "Download-Geschwindigkeit",
   "downloadSpeedAvg": "Download-Geschwindigkeit (Durchschn.)",
   "downloaded": "Heruntergeladen",
   "downloading": "Lädt herunter",
-  "downloads": "Downloads",
   "edit": "Bearbeiten",
   "editHeader": "Header bearbeiten",
   "enableAutoRefresh": "Auto-Aktualisierung aktivieren",
-  "english": "Englisch",
-  "error": "Fehler",
   "errorAddingTorrent": "Fehler beim Hinzufügen des Torrents",
   "erroredTorrents": "Fehlerhafte Torrents",
   "eta": "ETA",
@@ -107,11 +95,9 @@
   "failedToAddTorrent": "Torrent konnte nicht hinzugefügt werden",
   "failedToChangeLocation": "Speicherort-Änderung fehlgeschlagen",
   "failedToConnectToQBittorrent": "Verbindung zu qBittorrent fehlgeschlagen. Bitte überprüfen Sie Ihre Verbindungsdetails und versuchen Sie es erneut.",
-  "failedToDeleteServer": "Löschen des Servers fehlgeschlagen. Bitte versuchen Sie es erneut.",
   "failedToDeleteServerTryAgain": "Löschen des Servers fehlgeschlagen. Bitte versuchen Sie es erneut.",
   "failedToDeleteTorrent": "Torrent-Löschung fehlgeschlagen",
   "failedToLoadServers": "Laden der Server fehlgeschlagen. Bitte versuchen Sie es erneut.",
-  "failedToLoadStatistics": "Statistiken konnten nicht geladen werden",
   "statisticsLoadError": "Statistiken können derzeit nicht geladen werden. Bitte versuchen Sie es später erneut.",
   "statisticsNetworkError": "Netzwerkverbindungsproblem. Bitte überprüfen Sie Ihre Internetverbindung und versuchen Sie es erneut.",
   "statisticsDataError": "Statistikdaten können nicht verarbeitet werden. Bitte aktualisieren Sie und versuchen Sie es erneut.",
@@ -122,13 +108,10 @@
   "fileSize": "Dateigröße",
   "files": "Dateien",
   "filesChecked": "Dateien überprüft",
-  "filter": "Filtern",
   "filters": "Filter",
   "firstTorrentAdded": "Erster Torrent hinzugefügt",
   "forceStart": "Erzwungener Start",
-  "french": "Französisch",
   "generalInformation": "Allgemeine Informationen",
-  "german": "Deutsch",
   "headerKey": "Header-Schlüssel",
   "headerKeyCannotContainColons": "Header-Schlüssel darf keine Doppelpunkte enthalten",
   "headerKeyRequired": "Header-Schlüssel ist erforderlich",
@@ -137,10 +120,8 @@
   "headersPreview": "Header-Vorschau",
   "hidePassword": "Passwort verbergen",
   "high": "Hoch",
-  "highContrastDark": "Hochkontrast Dunkel",
   "highContrastDarkTheme": "Hochkontrast Dunkel",
   "highContrastDarkThemeDescription": "Hochkontrast dunkles Design für bessere Zugänglichkeit",
-  "highContrastLight": "Hochkontrast Hell",
   "highContrastLightTheme": "Hochkontrast Hell",
   "highContrastLightThemeDescription": "Hochkontrast helles Design für bessere Zugänglichkeit",
   "hostIpAddress": "Host/IP-Adresse",
@@ -150,7 +131,6 @@
   "invalidHostAddress": "Ungültige Host-Adresse",
   "invalidPort": "Ungültiger Port (1-65535)",
   "invalidProtocolFormat": "Ungültiges Protokollformat",
-  "language": "Sprache",
   "languageChangedTo": "Sprache geändert zu",
   "lastConnected": "Zuletzt verbunden:",
   "lastServerNeedToAddNew": "Dies ist Ihr letzter Server. Sie müssen einen neuen Server hinzufügen, um fortzufahren.",
@@ -159,9 +139,6 @@
   "leeches": "Leeches",
   "lightTheme": "Helles Design",
   "lightThemeDescription": "Sauberes und helles Lichtdesign",
-  "limitDownloadRate": "Download-Geschwindigkeit begrenzen",
-  "limitUploadRate": "Upload-Geschwindigkeit begrenzen",
-  "loading": "Lädt...",
   "logs": "Protokolle",
   "manageServers": "Server verwalten",
   "manual": "Manuell",
@@ -190,7 +167,6 @@
   "normal": "Normal",
   "notAvailable": "Nicht verfügbar",
   "notConnectedToQBittorrent": "Nicht mit qBittorrent verbunden",
-  "ok": "OK",
   "oledTheme": "OLED Design",
   "oledThemeDescription": "Echtes schwarzes Design für OLED-Displays",
   "operationFailed": "Operation fehlgeschlagen",
@@ -210,8 +186,6 @@
   "torrentFilePreselected": "Torrent-Datei aus der Dateien-App vorausgewählt",
   "torrentFileDetected": "Torrent-Datei erkannt und vorausgewählt",
   "failedToSwitchServer": "Server-Wechsel fehlgeschlagen",
-  "allApiCallsFailed": "Alle API-Aufrufe fehlgeschlagen",
-  "unableToLoadStatisticsData": "Alle API-Aufrufe fehlgeschlagen - keine Statistiken können geladen werden",
   "pleaseCheckInternetConnection": "Bitte überprüfen Sie Ihre Internetverbindung und versuchen Sie es erneut.",
   "pausedTorrents": "Pausierte Torrents",
   "peakDownloadSpeed": "Höchste Download-Geschwindigkeit",
@@ -233,19 +207,16 @@
   "progress": "Fortschritt",
   "protocolDetectedAutomatically": "Protokoll (http:// oder https://) wird automatisch erkannt",
   "qbittorrentVersion": "qBittorrent",
-  "queued": "In Warteschlange",
   "queuedIoJobs": "Warteschlangen-I/O-Jobs",
   "quickStats": "Schnellstatistiken",
   "ratio": "Ratio",
   "readCacheHits": "Lese-Cache-Treffer",
   "readCacheOverload": "Lese-Cache-Überlastung",
   "recheck": "Neu überprüfen",
-  "refresh": "Aktualisieren",
   "refreshInterval": "Aktualisierungsintervall",
   "refreshTorrents": "Torrents aktualisieren",
   "reload": "Neu laden",
   "rememberPasswordForFutureConnections": "Passwort für zukünftige Verbindungen merken",
-  "remove": "Entfernen",
   "rename": "Umbenennen",
   "renameTorrent": "Torrent umbenennen",
   "required": "Erforderlich",
@@ -253,10 +224,8 @@
   "resume": "Fortsetzen",
   "retry": "Wiederholen",
   "save": "Speichern",
-  "saveFilesToLocation": "Dateien an Speicherort speichern",
   "savePassword": "Passwort speichern",
   "savePath": "Speicherpfad",
-  "search": "Suchen",
   "searchTorrents": "Torrents suchen...",
   "seeders": "Seeders",
   "seeding": "Seeded",
@@ -270,14 +239,12 @@
   "sequentialDownload": "Sequenzieller Download",
   "serverDeleted": "gelöscht",
   "serverDeletedReplacementSet": "gelöscht. als Auto-Verbindung festgelegt",
-  "serverList": "Server-Liste",
   "serverName": "Servername",
   "serverNameHint": "z.B., Heim-NAS",
   "serverNameOptional": "Server-Name (optional)",
   "serverSetAsAutoConnect": "ist als Auto-Connect gesetzt. Bitte wählen Sie einen Ersatzserver vor dem Löschen:",
   "servers": "Server",
   "sessionWaste": "Session-Verschwendung",
-  "setAsAutoConnect": "Als Auto-Verbindung festlegen",
   "setPriority": "Priorität festlegen",
   "settings": "Einstellungen",
   "shareRatio": "Share-Ratio",
@@ -301,21 +268,14 @@
   "size": "Größe",
   "skip": "Überspringen",
   "skipHashCheck": "Hash-Überprüfung überspringen",
-  "sort": "Sortieren",
   "sortAndFilter": "Sortieren & Filtern",
   "sortBy": "Sortieren nach:",
-  "spanish": "Spanisch",
-  "speed": "Geschwindigkeit",
-  "stalled": "Hängt",
-  "start": "Starten",
   "startTorrent": "Torrent starten",
   "state": "Status",
   "statistics": "Statistiken",
   "stats": "Statistiken",
   "status": "Status",
-  "stop": "Stoppen",
   "stopCondition": "Stopp-Bedingung",
-  "success": "Erfolg",
   "successfullyAddedTorrents": "Torrent(s) erfolgreich hinzugefügt",
   "successfullyDeleted": "Erfolgreich {count} Torrents gelöscht",
   "successfullyPaused": "Erfolgreich {count} Torrents pausiert",
@@ -323,7 +283,6 @@
   "switchServer": "Server wechseln",
   "systemTheme": "System Design",
   "systemThemeDescription": "Folgt dem Systemdesign Ihres Geräts",
-  "tags": "Tags",
   "tapAddServerBelowToConnect": "Tippen Sie unten auf \"Server hinzufügen\", um sich mit Ihrem ersten qBittorrent-Server zu verbinden.",
   "tapToConnectLongPressOptions": "Tippen zum Verbinden. Lang drücken für Optionen.",
   "technicalInformation": "Technische Informationen",
@@ -351,7 +310,6 @@
   "torrentRenamedSuccessfully": "Torrent erfolgreich umbenannt",
   "torrentStatus": "Torrent-Status",
   "torrentUrls": "Torrent-URLs",
-  "torrents": "Torrents",
   "total": "Gesamt",
   "totalBufferSize": "Gesamtpuffergröße",
   "totalLeechers": "Gesamte Leechers",
@@ -360,9 +318,7 @@
   "totalSize": "Gesamtgröße",
   "totalTorrents": "Gesamte Torrents",
   "totalWasted": "Gesamt verschwendet",
-  "tracker": "Tracker",
   "trackers": "Tracker",
-  "transferInfo": "Transfer-Informationen",
   "transferInformation": "Übertragungsinformationen",
   "transferSpeeds": "Übertragungsgeschwindigkeiten",
   "transferStatistics": "Übertragungsstatistiken",
@@ -375,7 +331,6 @@
   "uploadSpeed": "Upload-Geschwindigkeit",
   "uploadSpeedAvg": "Upload-Geschwindigkeit (Durchschn.)",
   "uploaded": "Hochgeladen",
-  "uploads": "Uploads",
   "urls": "URLs",
   "useHttps": "HTTPS verwenden",
   "username": "Benutzername",
@@ -400,5 +355,24 @@
   "sortFilter": "Sortieren",
   "errorHandlingTorrentLink": "Fehler beim Behandeln des Torrent-Links",
   "failedToProcessTorrentFile": "Torrent-Datei konnte nicht verarbeitet werden",
-  "switchingToServer": "Wechsel zu"
+  "switchingToServer": "Wechsel zu",
+  "unknownErrorOccurred": "Ein unbekannter Fehler ist aufgetreten",
+  "connectionTimedOutMessage": "Verbindungszeitüberschreitung. Bitte überprüfen Sie:\n• Ihre Internetverbindung\n• Die Server-URL ist korrekt\n• Der qBittorrent-Server läuft\n• Der Port ist erreichbar",
+  "networkErrorMessage": "Netzwerkfehler. Bitte überprüfen Sie:\n• Ihre Internetverbindung\n• Die Server-URL und den Port\n• qBittorrent läuft und ist erreichbar",
+  "cannotFindServerMessage": "Server kann nicht gefunden werden. Bitte überprüfen Sie:\n• Die Server-URL ist korrekt\n• Ihre Internetverbindung\n• Versuchen Sie, die IP-Adresse anstelle des Hostnamens zu verwenden",
+  "sslTlsErrorMessage": "SSL/TLS-Verbindungsfehler. Bitte überprüfen Sie:\n• Verwenden Sie https:// für sichere Verbindungen\n• Verwenden Sie http:// für unsichere Verbindungen\n• Das Server-Zertifikat ist gültig",
+  "authenticationFailedMessage": "Authentifizierung fehlgeschlagen. Bitte überprüfen Sie:\n• Benutzername und Passwort sind korrekt\n• Sie haben Berechtigung für den Zugriff auf qBittorrent\n• Authentifizierung ist in den qBittorrent-Einstellungen aktiviert",
+  "serverNotFoundMessage": "Server nicht gefunden. Bitte überprüfen Sie:\n• Die Server-URL ist korrekt\n• qBittorrent läuft\n• Die Web-Oberfläche ist in den qBittorrent-Einstellungen aktiviert",
+  "serverErrorMessage": "Server-Fehler. Bitte überprüfen Sie:\n• qBittorrent läuft ordnungsgemäß\n• Versuchen Sie, qBittorrent neu zu starten\n• Überprüfen Sie die qBittorrent-Protokolle auf Fehler",
+  "invalidUrlFormatMessage": "Ungültiges URL-Format. Bitte überprüfen Sie:\n• URL beginnt mit http:// oder https://\n• Portnummer ist korrekt (z.B. :8080)\n• Keine zusätzlichen Leerzeichen oder Sonderzeichen",
+  "requestTimedOutMessage": "Anfrage-Zeitüberschreitung. Bitte überprüfen Sie:\n• Ihre Internetverbindung\n• Der Server antwortet\n• Versuchen Sie es in wenigen Momenten erneut",
+  "connectionErrorMessage": "Verbindungsfehler. Bitte überprüfen Sie:\n• Server-URL und Port sind korrekt\n• qBittorrent läuft\n• Ihre Internetverbindung",
+  "connectionFailedMessage": "Verbindung fehlgeschlagen. Bitte überprüfen Sie:\n• Server-URL und Port sind korrekt\n• Benutzername und Passwort sind korrekt\n• qBittorrent läuft und ist erreichbar\n• Ihre Internetverbindung",
+  "connectionFailed": "Verbindung fehlgeschlagen",
+  "connectionTimedOut": "Verbindungszeitüberschreitung",
+  "authenticationFailed": "Authentifizierung fehlgeschlagen",
+  "serverNotFound": "Server nicht gefunden",
+  "networkError": "Netzwerkfehler",
+  "cannotFindServer": "Server kann nicht gefunden werden",
+  "requestTimedOut": "Anfrage-Zeitüberschreitung"
 }
