--- a/assets/translations/en-US.json
+++ b/assets/translations/en-US.json
@@ -20,11 +20,9 @@
   "analytics": "Analytics",
   "andFiles": "and files",
   "appName": "qBitConnect",
-  "appTitle": "qBitConnect",
   "applyFilter": "Apply Filter",
   "areYouSureDeleteServer": "Are you sure you want to delete",
   "areYouSureDeleteTorrents": "Are you sure you want to delete {count} torrent(s)?",
-  "authenticationRequired": "Authentication required",
   "authenticationRequiredMessage": "This qBittorrent instance requires authentication. Please provide username and password.",
   "autoTmm": "Auto TMM",
   "automatic": "Automatic",
@@ -40,9 +38,7 @@
   "change": "Change",
   "changeLocation": "Change Location",
   "changeSaveLocation": "Change Save Location",
-  "checking": "Checking",
   "checkingConnection": "Checking connection...",
-  "chooseLanguage": "Choose Language",
   "chooseTheme": "Choose Theme",
   "chooseWhatToDelete": "Choose what to delete.",
   "collectingData": "Collecting data...",
@@ -62,7 +58,6 @@
   "createSubfolder": "Create subfolder",
   "createdBy": "Created By",
   "currentFilter": "Current Filter",
-  "currentlySelected": "Currently selected",
   "customHeaders": "Custom Headers",
   "customizeTorrentCard": "Customize torrent card",
   "customizeTorrentCardInfo": "Customize Torrent Card Info",
@@ -77,27 +72,20 @@
   "deleteServer": "Delete Server",
   "deleteTorrent": "Delete Torrent",
   "deleteTorrents": "Delete Torrents",
-  "deleted": "deleted",
   "deletingTorrents": "Deleting torrents...",
-  "disconnect": "Disconnect",
   "disconnectFirstToDelete": "Disconnect first to delete",
   "doNotDownload": "Do not download",
   "dontCreateSubfolder": "Don't create subfolder",
   "download": "Download",
-  "downloadFirstLast": "Download first and last pieces first",
   "downloadProgress": "Download Progress",
   "downloadLimit": "Download Limit",
-  "downloadSequential": "Download in sequential order",
   "downloadSpeed": "Download Speed",
   "downloadSpeedAvg": "Download Speed (Avg)",
   "downloaded": "Downloaded",
   "downloading": "Downloading",
-  "downloads": "Downloads",
   "edit": "Edit",
   "editHeader": "Edit Header",
   "enableAutoRefresh": "Enable Auto-Refresh",
-  "english": "English",
-  "error": "Error",
   "errorAddingTorrent": "Error adding torrent",
   "erroredTorrents": "Errored Torrents",
   "eta": "ETA",
@@ -107,11 +95,9 @@
   "failedToAddTorrent": "Failed to add torrent",
   "failedToChangeLocation": "Failed to change location",
   "failedToConnectToQBittorrent": "Failed to connect to qBittorrent. Please check your connection details and try again.",
-  "failedToDeleteServer": "Failed to delete server. Please try again.",
   "failedToDeleteServerTryAgain": "Failed to delete server. Please try again.",
   "failedToDeleteTorrent": "Failed to delete torrent",
   "failedToLoadServers": "Failed to load servers. Please try again.",
-  "failedToLoadStatistics": "Failed to load statistics",
   "statisticsLoadError": "Unable to load statistics at this time. Please try again later.",
   "statisticsNetworkError": "Network connection issue. Please check your internet connection and try again.",
   "statisticsDataError": "Unable to process statistics data. Please refresh and try again.",
@@ -122,13 +108,10 @@
   "fileSize": "File size",
   "files": "Files",
   "filesChecked": "Files checked",
-  "filter": "Filter",
   "filters": "Filters",
   "firstTorrentAdded": "First Torrent Added",
   "forceStart": "Force Start",
-  "french": "French",
   "generalInformation": "General Information",
-  "german": "German",
   "headerKey": "Header Key",
   "headerKeyCannotContainColons": "Header key cannot contain colons",
   "headerKeyRequired": "Header key is required",
@@ -137,10 +120,8 @@
   "headersPreview": "Headers Preview",
   "hidePassword": "Hide password",
   "high": "High",
-  "highContrastDark": "High Contrast Dark",
   "highContrastDarkTheme": "High Contrast Dark",
   "highContrastDarkThemeDescription": "High contrast dark theme for better accessibility",
-  "highContrastLight": "High Contrast Light",
   "highContrastLightTheme": "High Contrast Light",
   "highContrastLightThemeDescription": "High contrast light theme for better accessibility",
   "hostIpAddress": "Host/IP Address",
@@ -150,7 +131,6 @@
   "invalidHostAddress": "Invalid host address",
   "invalidPort": "Invalid port (1-65535)",
   "invalidProtocolFormat": "Invalid protocol format",
-  "language": "Language",
   "languageChangedTo": "Language changed to",
   "lastConnected": "Last connected:",
   "lastServerNeedToAddNew": "This is your last server. You will need to add a new server to continue.",
@@ -159,9 +139,6 @@
   "leeches": "Leeches",
   "lightTheme": "Light Theme",
   "lightThemeDescription": "Clean and bright light theme",
-  "limitDownloadRate": "Limit download rate",
-  "limitUploadRate": "Limit upload rate",
-  "loading": "Loading...",
   "logs": "Logs",
   "manageServers": "Manage Servers",
   "manual": "Manual",
@@ -190,7 +167,6 @@
   "normal": "Normal",
   "notAvailable": "Not available",
   "notConnectedToQBittorrent": "Not connected to qBittorrent",
-  "ok": "OK",
   "oledTheme": "OLED Theme",
   "oledThemeDescription": "True black theme for OLED displays",
   "operationFailed": "Operation failed",
@@ -210,8 +186,6 @@
   "torrentFilePreselected": "Torrent file pre-selected from Files app",
   "torrentFileDetected": "Torrent file detected and pre-selected",
   "failedToSwitchServer": "Failed to switch server",
-  "allApiCallsFailed": "All API calls failed",
-  "unableToLoadStatisticsData": "All API calls failed - unable to load any statistics data",
   "pleaseCheckInternetConnection": "Please check your internet connection and try again.",
   "pausedTorrents": "Paused Torrents",
   "peakDownloadSpeed": "Peak Download Speed",
@@ -233,19 +207,16 @@
   "progress": "Progress",
   "protocolDetectedAutomatically": "Protocol (http:// or https://) will be detected automatically",
   "qbittorrentVersion": "qBittorrent",
-  "queued": "Queued",
   "queuedIoJobs": "Queued I/O Jobs",
   "quickStats": "Quick Stats",
   "ratio": "Ratio",
   "readCacheHits": "Read Cache Hits",
   "readCacheOverload": "Read Cache Overload",
   "recheck": "Recheck",
-  "refresh": "Refresh",
   "refreshInterval": "Refresh Interval",
   "refreshTorrents": "Refresh torrents",
   "reload": "Reload",
   "rememberPasswordForFutureConnections": "Remember password for future connections",
-  "remove": "Remove",
   "rename": "Rename",
   "renameTorrent": "Rename torrent",
   "required": "Required",
@@ -253,10 +224,8 @@
   "resume": "Resume",
   "retry": "Retry",
   "save": "Save",
-  "saveFilesToLocation": "Save files to location",
   "savePassword": "Save Password",
   "savePath": "Save Path",
-  "search": "Search",
   "searchTorrents": "Search torrents...",
   "seeders": "Seeders",
   "seeding": "Seeding",
@@ -270,14 +239,12 @@
   "sequentialDownload": "Sequential Download",
   "serverDeleted": "deleted",
   "serverDeletedReplacementSet": "deleted. set as auto-connect",
-  "serverList": "Server List",
   "serverName": "Server Name",
   "serverNameHint": "e.g., Home NAS",
   "serverNameOptional": "Server name (optional)",
   "serverSetAsAutoConnect": "is set as auto-connect. Please select a replacement server before deleting:",
   "servers": "Servers",
   "sessionWaste": "Session Waste",
-  "setAsAutoConnect": "Set as Auto-Connect",
   "setPriority": "Set Priority",
   "settings": "Settings",
   "shareRatio": "Share Ratio",
@@ -301,21 +268,14 @@
   "size": "Size",
   "skip": "Skip",
   "skipHashCheck": "Skip hash check",
-  "sort": "Sort",
   "sortAndFilter": "Sort & Filter",
   "sortBy": "Sort By:",
-  "spanish": "Spanish",
-  "speed": "Speed",
-  "stalled": "Stalled",
-  "start": "Start",
   "startTorrent": "Start Torrent",
   "state": "State",
   "statistics": "Statistics",
   "stats": "Stats",
   "status": "Status",
-  "stop": "Stop",
   "stopCondition": "Stop condition",
-  "success": "Success",
   "successfullyAddedTorrents": "Successfully added torrent(s)",
   "successfullyDeleted": "Successfully deleted {count} torrents",
   "successfullyPaused": "Successfully paused {count} torrents",
@@ -323,7 +283,6 @@
   "switchServer": "Switch Server",
   "systemTheme": "System Theme",
   "systemThemeDescription": "Follows your device's system theme",
-  "tags": "Tags",
   "tapAddServerBelowToConnect": "Tap \"Add Server\" below to connect to your first qBittorrent server.",
   "tapToConnectLongPressOptions": "Tap to connect. Long press for options.",
   "technicalInformation": "Technical Information",
@@ -351,7 +310,6 @@
   "torrentRenamedSuccessfully": "Torrent renamed successfully",
   "torrentStatus": "Torrent Status",
   "torrentUrls": "Torrent URLs",
-  "torrents": "Torrents",
   "total": "Total",
   "totalBufferSize": "Total Buffer Size",
   "totalLeechers": "Total Leechers",
@@ -360,9 +318,7 @@
   "totalSize": "Total Size",
   "totalTorrents": "Total Torrents",
   "totalWasted": "Total Wasted",
-  "tracker": "Tracker",
   "trackers": "Trackers",
-  "transferInfo": "Transfer Info",
   "transferInformation": "Transfer Information",
   "transferSpeeds": "Transfer Speeds",
   "transferStatistics": "Transfer Statistics",
@@ -375,7 +331,6 @@
   "uploadSpeed": "Upload Speed",
   "uploadSpeedAvg": "Upload Speed (Avg)",
   "uploaded": "Uploaded",
-  "uploads": "Uploads",
   "urls": "URLs",
   "useHttps": "Use HTTPS",
   "username": "Username",
@@ -400,5 +355,24 @@
   "sortFilter": "Sort",
   "errorHandlingTorrentLink": "Error handling torrent link",
   "failedToProcessTorrentFile": "Failed to process torrent file",
-  "switchingToServer": "Switching to"
+  "switchingToServer": "Switching to",
+  "unknownErrorOccurred": "An unknown error occurred",
+  "connectionTimedOutMessage": "Connection timed out. Please check:\n• Your internet connection\n• The server URL is correct\n• The qBittorrent server is running\n• The port is accessible",
+  "networkErrorMessage": "Network error. Please check:\n• Your internet connection\n• The server URL and port\n• qBittorrent is running and accessible",
+  "cannotFindServerMessage": "Cannot find the server. Please check:\n• The server URL is correct\n• Your internet connection\n• Try using IP address instead of hostname",
+  "sslTlsErrorMessage": "SSL/TLS connection error. Please check:\n• Use https:// for secure connections\n• Use http:// for non-secure connections\n• Server certificate is valid",
+  "authenticationFailedMessage": "Authentication failed. Please check:\n• Username and password are correct\n• You have permission to access qBittorrent\n• Authentication is enabled in qBittorrent settings",
+  "serverNotFoundMessage": "Server not found. Please check:\n• The server URL is correct\n• qBittorrent is running\n• The web UI is enabled in qBittorrent settings",
+  "serverErrorMessage": "Server error. Please check:\n• qBittorrent is running properly\n• Try restarting qBittorrent\n• Check qBittorrent logs for errors",
+  "invalidUrlFormatMessage": "Invalid URL format. Please check:\n• URL starts with http:// or https://\n• Port number is correct (e.g., :8080)\n• No extra spaces or special characters",
+  "requestTimedOutMessage": "Request timed out. Please check:\n• Your internet connection\n• The server is responding\n• Try again in a few moments",
+  "connectionErrorMessage": "Connection error. Please check:\n• Server URL and port are correct\n• qBittorrent is running\n• Your internet connection",
+  "connectionFailedMessage": "Connection failed. Please check:\n• Server URL and port are correct\n• Username and password are correct\n• qBittorrent is running and accessible\n• Your internet connection",
+  "connectionFailed": "Connection failed",
+  "connectionTimedOut": "Connection timed out",
+  "authenticationFailed": "Authentication failed",
+  "serverNotFound": "Server not found",
+  "networkError": "Network error",
+  "cannotFindServer": "Cannot find server",
+  "requestTimedOut": "Request timed out"
 }
