--- a/assets/translations/es-ES.json
+++ b/assets/translations/es-ES.json
@@ -20,11 +20,9 @@
   "analytics": "Analíticas",
   "andFiles": "y archivos",
   "appName": "qBitConnect",
-  "appTitle": "qBitConnect",
   "applyFilter": "Aplicar Filtro",
   "areYouSureDeleteServer": "¿Estás seguro de que quieres eliminar",
   "areYouSureDeleteTorrents": "¿Estás seguro de que quieres eliminar {count} torrent(s)?",
-  "authenticationRequired": "Autenticación requerida",
   "authenticationRequiredMessage": "Esta instancia de qBittorrent requiere autenticación. Por favor proporciona nombre de usuario y contraseña.",
   "autoTmm": "TMM Automático",
   "automatic": "Automático",
@@ -40,9 +38,7 @@
   "change": "Cambiar",
   "changeLocation": "Cambiar Ubicación",
   "changeSaveLocation": "Cambiar Ubicación de Guardado",
-  "checking": "Verificando",
   "checkingConnection": "Verificando conexión...",
-  "chooseLanguage": "Elegir Idioma",
   "chooseTheme": "Elegir Tema",
   "chooseWhatToDelete": "Elige qué eliminar:",
   "collectingData": "Recolectando datos...",
@@ -62,7 +58,6 @@
   "createSubfolder": "Crear subcarpeta",
   "createdBy": "Creado por",
   "currentFilter": "Filtro Actual",
-  "currentlySelected": "Actualmente seleccionado",
   "customHeaders": "Encabezados Personalizados",
   "customizeTorrentCard": "Personalizar tarjeta de torrent",
   "customizeTorrentCardInfo": "Personalizar Información de Tarjeta de Torrent",
@@ -77,27 +72,20 @@
   "deleteServer": "Eliminar Servidor",
   "deleteTorrent": "Eliminar Torrent",
   "deleteTorrents": "Eliminar Torrents",
-  "deleted": "eliminado",
   "deletingTorrents": "Eliminando torrents...",
-  "disconnect": "Desconectar",
   "disconnectFirstToDelete": "Desconectar primero para eliminar",
   "doNotDownload": "No descargar",
   "dontCreateSubfolder": "No crear subcarpeta",
   "download": "Descarga",
-  "downloadFirstLast": "Descargar primero y último fragmentos primero",
   "downloadProgress": "Progreso de Descarga",
   "downloadLimit": "Límite de Descarga",
-  "downloadSequential": "Descargar en orden secuencial",
   "downloadSpeed": "Velocidad de Descarga",
   "downloadSpeedAvg": "Velocidad de Descarga (Prom.)",
   "downloaded": "Descargado",
   "downloading": "Descargando",
-  "downloads": "Descargas",
   "edit": "Editar",
   "editHeader": "Editar Encabezado",
   "enableAutoRefresh": "Habilitar Actualización Automática",
-  "english": "Inglés",
-  "error": "Error",
   "errorAddingTorrent": "Error al agregar torrent",
   "erroredTorrents": "Torrents con Error",
   "eta": "ETA",
@@ -107,11 +95,9 @@
   "failedToAddTorrent": "Error al agregar torrent",
   "failedToChangeLocation": "Error al cambiar ubicación",
   "failedToConnectToQBittorrent": "Error al conectar a qBittorrent. Por favor verifica los detalles de conexión e inténtalo de nuevo.",
-  "failedToDeleteServer": "Error al eliminar servidor. Por favor inténtalo de nuevo.",
   "failedToDeleteServerTryAgain": "Error al eliminar servidor. Por favor inténtalo de nuevo.",
   "failedToDeleteTorrent": "Error al eliminar torrent",
   "failedToLoadServers": "Error al cargar servidores. Por favor inténtalo de nuevo.",
-  "failedToLoadStatistics": "Error al cargar estadísticas",
   "statisticsLoadError": "No se pueden cargar las estadísticas en este momento. Por favor, inténtelo de nuevo más tarde.",
   "statisticsNetworkError": "Problema de conexión de red. Por favor, verifique su conexión a Internet e inténtelo de nuevo.",
   "statisticsDataError": "No se pueden procesar los datos de estadísticas. Por favor, actualice e inténtelo de nuevo.",
@@ -122,13 +108,10 @@
   "fileSize": "Tamaño del archivo",
   "files": "Archivos",
   "filesChecked": "Archivos verificados",
-  "filter": "Filtrar",
   "filters": "Filtros",
   "firstTorrentAdded": "Primer Torrent Agregado",
   "forceStart": "Inicio Forzado",
-  "french": "Francés",
   "generalInformation": "Información General",
-  "german": "Alemán",
   "headerKey": "Clave del Encabezado",
   "headerKeyCannotContainColons": "La clave del encabezado no puede contener dos puntos",
   "headerKeyRequired": "La clave del encabezado es requerida",
@@ -137,10 +120,8 @@
   "headersPreview": "Vista Previa de Encabezados",
   "hidePassword": "Ocultar contraseña",
   "high": "Alto",
-  "highContrastDark": "Alto Contraste Oscuro",
   "highContrastDarkTheme": "Alto Contraste Oscuro",
   "highContrastDarkThemeDescription": "Tema oscuro de alto contraste para mejor accesibilidad",
-  "highContrastLight": "Alto Contraste Claro",
   "highContrastLightTheme": "Alto Contraste Claro",
   "highContrastLightThemeDescription": "Tema claro de alto contraste para mejor accesibilidad",
   "hostIpAddress": "Host/Dirección IP",
@@ -150,7 +131,6 @@
   "invalidHostAddress": "Dirección de host inválida",
   "invalidPort": "Puerto inválido (1-65535)",
   "invalidProtocolFormat": "Formato de protocolo inválido",
-  "language": "Idioma",
   "languageChangedTo": "Idioma cambiado a",
   "lastConnected": "Última conexión:",
   "lastServerNeedToAddNew": "Este es tu último servidor. Necesitarás agregar un nuevo servidor para continuar.",
@@ -159,9 +139,6 @@
   "leeches": "Leeches",
   "lightTheme": "Tema Claro",
   "lightThemeDescription": "Tema claro limpio y brillante",
-  "limitDownloadRate": "Limitar velocidad de descarga",
-  "limitUploadRate": "Limitar velocidad de subida",
-  "loading": "Cargando...",
   "logs": "Registros",
   "manageServers": "Administrar Servidores",
   "manual": "Manual",
@@ -190,7 +167,6 @@
   "normal": "Normal",
   "notAvailable": "No disponible",
   "notConnectedToQBittorrent": "No conectado a qBittorrent",
-  "ok": "OK",
   "oledTheme": "Tema OLED",
   "oledThemeDescription": "Tema negro verdadero para pantallas OLED",
   "operationFailed": "Operación falló",
@@ -210,8 +186,6 @@
   "torrentFilePreselected": "Archivo torrent preseleccionado desde la app de Archivos",
   "torrentFileDetected": "Archivo torrent detectado y preseleccionado",
   "failedToSwitchServer": "Error al cambiar de servidor",
-  "allApiCallsFailed": "Todas las llamadas API fallaron",
-  "unableToLoadStatisticsData": "Todas las llamadas API fallaron - no se pudieron cargar datos de estadísticas",
   "pleaseCheckInternetConnection": "Por favor verifica tu conexión a internet e inténtalo de nuevo.",
   "pausedTorrents": "Torrents Pausados",
   "peakDownloadSpeed": "Velocidad Máxima de Descarga",
@@ -233,19 +207,16 @@
   "progress": "Progreso",
   "protocolDetectedAutomatically": "El protocolo (http:// o https://) se detectará automáticamente",
   "qbittorrentVersion": "qBittorrent",
-  "queued": "En Cola",
   "queuedIoJobs": "Trabajos I/O en Cola",
   "quickStats": "Estadísticas Rápidas",
   "ratio": "Ratio",
   "readCacheHits": "Aciertos de Cache de Lectura",
   "readCacheOverload": "Sobrecarga de Cache de Lectura",
   "recheck": "Verificar",
-  "refresh": "Actualizar",
   "refreshInterval": "Intervalo de Actualización",
   "refreshTorrents": "Actualizar torrents",
   "reload": "Recargar",
   "rememberPasswordForFutureConnections": "Recordar contraseña para futuras conexiones",
-  "remove": "Quitar",
   "rename": "Renombrar",
   "renameTorrent": "Renombrar torrent",
   "required": "Requerido",
@@ -253,10 +224,8 @@
   "resume": "Reanudar",
   "retry": "Reintentar",
   "save": "Guardar",
-  "saveFilesToLocation": "Guardar archivos en ubicación",
   "savePassword": "Guardar Contraseña",
   "savePath": "Ruta de Guardado",
-  "search": "Buscar",
   "searchTorrents": "Buscar torrents...",
   "seeders": "Seeders",
   "seeding": "Seeding",
@@ -270,14 +239,12 @@
   "sequentialDownload": "Descarga Secuencial",
   "serverDeleted": "eliminado",
   "serverDeletedReplacementSet": "eliminado. establecido como auto-conectar",
-  "serverList": "Lista de Servidores",
   "serverName": "Nombre del Servidor",
   "serverNameHint": "ej., NAS de casa",
   "serverNameOptional": "Nombre del servidor (opcional)",
   "serverSetAsAutoConnect": "está configurado como auto-conectar. Por favor selecciona un servidor de reemplazo antes de eliminar:",
   "servers": "Servidores",
   "sessionWaste": "Desperdicio de Sesión",
-  "setAsAutoConnect": "Establecer como Auto-Conectar",
   "setPriority": "Establecer Prioridad",
   "settings": "Configuración",
   "shareRatio": "Ratio de Compartir",
@@ -301,21 +268,14 @@
   "size": "Tamaño",
   "skip": "Omitir",
   "skipHashCheck": "Omitir verificación hash",
-  "sort": "Ordenar",
   "sortAndFilter": "Ordenar y Filtrar",
   "sortBy": "Ordenar por:",
-  "spanish": "Español",
-  "speed": "Velocidad",
-  "stalled": "Estancado",
-  "start": "Iniciar",
   "startTorrent": "Iniciar Torrent",
   "state": "Estado",
   "statistics": "Estadísticas",
   "stats": "Estadísticas",
   "status": "Estado",
-  "stop": "Detener",
   "stopCondition": "Condición de parada",
-  "success": "Éxito",
   "successfullyAddedTorrents": "Torrent(s) agregado(s) exitosamente",
   "successfullyDeleted": "Eliminados exitosamente {count} torrents",
   "successfullyPaused": "Pausados exitosamente {count} torrents",
@@ -323,7 +283,6 @@
   "switchServer": "Cambiar Servidor",
   "systemTheme": "Tema del Sistema",
   "systemThemeDescription": "Sigue el tema del sistema de tu dispositivo",
-  "tags": "Etiquetas",
   "tapAddServerBelowToConnect": "Toca \"Agregar Servidor\" abajo para conectarte a tu primer servidor qBittorrent.",
   "tapToConnectLongPressOptions": "Toca para conectar. Mantén presionado para opciones.",
   "technicalInformation": "Información Técnica",
@@ -351,7 +310,6 @@
   "torrentRenamedSuccessfully": "Torrent renombrado exitosamente",
   "torrentStatus": "Estado del Torrent",
   "torrentUrls": "URLs de Torrent",
-  "torrents": "Torrents",
   "total": "Total",
   "totalBufferSize": "Tamaño Total del Buffer",
   "totalLeechers": "Total de Leechers",
@@ -360,9 +318,7 @@
   "totalSize": "Tamaño Total",
   "totalTorrents": "Total de Torrents",
   "totalWasted": "Total Desperdiciado",
-  "tracker": "Tracker",
   "trackers": "Trackers",
-  "transferInfo": "Información de Transferencia",
   "transferInformation": "Información de Transferencia",
   "transferSpeeds": "Velocidades de Transferencia",
   "transferStatistics": "Estadísticas de Transferencia",
@@ -375,7 +331,6 @@
   "uploadSpeed": "Velocidad de Subida",
   "uploadSpeedAvg": "Velocidad de Subida (Prom.)",
   "uploaded": "Subido",
-  "uploads": "Subidas",
   "urls": "URLs",
   "useHttps": "Usar HTTPS",
   "username": "Usuario",
@@ -400,5 +355,24 @@
   "sortFilter": "Ordenar",
   "errorHandlingTorrentLink": "Error al manejar el enlace torrent",
   "failedToProcessTorrentFile": "Error al procesar el archivo torrent",
-  "switchingToServer": "Cambiando a"
+  "switchingToServer": "Cambiando a",
+  "unknownErrorOccurred": "Ocurrió un error desconocido",
+  "connectionTimedOutMessage": "Conexión agotada. Por favor verifica:\n• Tu conexión a internet\n• La URL del servidor es correcta\n• El servidor qBittorrent está ejecutándose\n• El puerto es accesible",
+  "networkErrorMessage": "Error de red. Por favor verifica:\n• Tu conexión a internet\n• La URL del servidor y puerto\n• qBittorrent está ejecutándose y es accesible",
+  "cannotFindServerMessage": "No se puede encontrar el servidor. Por favor verifica:\n• La URL del servidor es correcta\n• Tu conexión a internet\n• Intenta usar la dirección IP en lugar del nombre de host",
+  "sslTlsErrorMessage": "Error de conexión SSL/TLS. Por favor verifica:\n• Usa https:// para conexiones seguras\n• Usa http:// para conexiones no seguras\n• El certificado del servidor es válido",
+  "authenticationFailedMessage": "Autenticación fallida. Por favor verifica:\n• El nombre de usuario y contraseña son correctos\n• Tienes permisos para acceder a qBittorrent\n• La autenticación está habilitada en la configuración de qBittorrent",
+  "serverNotFoundMessage": "Servidor no encontrado. Por favor verifica:\n• La URL del servidor es correcta\n• qBittorrent está ejecutándose\n• La interfaz web está habilitada en la configuración de qBittorrent",
+  "serverErrorMessage": "Error del servidor. Por favor verifica:\n• qBittorrent está ejecutándose correctamente\n• Intenta reiniciar qBittorrent\n• Revisa los registros de qBittorrent para errores",
+  "invalidUrlFormatMessage": "Formato de URL inválido. Por favor verifica:\n• La URL comienza con http:// o https://\n• El número de puerto es correcto (ej., :8080)\n• No hay espacios extra o caracteres especiales",
+  "requestTimedOutMessage": "Solicitud agotada. Por favor verifica:\n• Tu conexión a internet\n• El servidor está respondiendo\n• Intenta de nuevo en unos momentos",
+  "connectionErrorMessage": "Error de conexión. Por favor verifica:\n• La URL del servidor y puerto son correctos\n• qBittorrent está ejecutándose\n• Tu conexión a internet",
+  "connectionFailedMessage": "Conexión fallida. Por favor verifica:\n• La URL del servidor y puerto son correctos\n• El nombre de usuario y contraseña son correctos\n• qBittorrent está ejecutándose y es accesible\n• Tu conexión a internet",
+  "connectionFailed": "Conexión fallida",
+  "connectionTimedOut": "Conexión agotada",
+  "authenticationFailed": "Autenticación fallida",
+  "serverNotFound": "Servidor no encontrado",
+  "networkError": "Error de red",
+  "cannotFindServer": "No se puede encontrar el servidor",
+  "requestTimedOut": "Solicitud agotada"
 }
