--- a/assets/translations/fr-FR.json
+++ b/assets/translations/fr-FR.json
@@ -20,11 +20,9 @@
   "analytics": "Analytiques",
   "andFiles": "et fichiers",
   "appName": "qBitConnect",
-  "appTitle": "qBitConnect",
   "applyFilter": "Appliquer le Filtre",
   "areYouSureDeleteServer": "Êtes-vous sûr de vouloir supprimer",
   "areYouSureDeleteTorrents": "Êtes-vous sûr de vouloir supprimer {count} torrent(s)?",
-  "authenticationRequired": "Authentification requise",
   "authenticationRequiredMessage": "Cette instance qBittorrent nécessite une authentification. Veuillez fournir un nom d'utilisateur et un mot de passe.",
   "autoTmm": "TMM Automatique",
   "automatic": "Automatique",
@@ -40,9 +38,7 @@
   "change": "Changer",
   "changeLocation": "Changer l'Emplacement",
   "changeSaveLocation": "Changer l'Emplacement de Sauvegarde",
-  "checking": "Vérification",
   "checkingConnection": "Vérification de la connexion...",
-  "chooseLanguage": "Choisir la Langue",
   "chooseTheme": "Choisir le Thème",
   "chooseWhatToDelete": "Choisissez quoi supprimer.",
   "collectingData": "Collecte de données...",
@@ -62,7 +58,6 @@
   "createSubfolder": "Créer un sous-dossier",
   "createdBy": "Créé par",
   "currentFilter": "Filtre Actuel",
-  "currentlySelected": "Actuellement sélectionné",
   "customHeaders": "En-têtes Personnalisés",
   "customizeTorrentCard": "Personnaliser la carte torrent",
   "customizeTorrentCardInfo": "Personnaliser les Informations de la Carte Torrent",
@@ -77,27 +72,20 @@
   "deleteServer": "Supprimer le Serveur",
   "deleteTorrent": "Supprimer le Torrent",
   "deleteTorrents": "Supprimer les Torrents",
-  "deleted": "supprimé",
   "deletingTorrents": "Suppression des torrents...",
-  "disconnect": "Se déconnecter",
   "disconnectFirstToDelete": "Se déconnecter d'abord pour supprimer",
   "doNotDownload": "Ne pas télécharger",
   "dontCreateSubfolder": "Ne pas créer de sous-dossier",
   "download": "Téléchargement",
-  "downloadFirstLast": "Télécharger d'abord les premiers et derniers fragments",
   "downloadProgress": "Progression du Téléchargement",
   "downloadLimit": "Limite de Téléchargement",
-  "downloadSequential": "Télécharger dans l'ordre séquentiel",
   "downloadSpeed": "Vitesse de Téléchargement",
   "downloadSpeedAvg": "Vitesse de Téléchargement (Moy.)",
   "downloaded": "Téléchargé",
   "downloading": "Téléchargement",
-  "downloads": "Téléchargements",
   "edit": "Modifier",
   "editHeader": "Modifier l'En-tête",
   "enableAutoRefresh": "Activer l'Actualisation Automatique",
-  "english": "Anglais",
-  "error": "Erreur",
   "errorAddingTorrent": "Erreur lors de l'ajout du torrent",
   "erroredTorrents": "Torrents en Erreur",
   "eta": "ETA",
@@ -107,11 +95,9 @@
   "failedToAddTorrent": "Échec de l'ajout du torrent",
   "failedToChangeLocation": "Échec du changement d'emplacement",
   "failedToConnectToQBittorrent": "Échec de la connexion à qBittorrent. Veuillez vérifier vos détails de connexion et réessayer.",
-  "failedToDeleteServer": "Échec de la suppression du serveur. Veuillez réessayer.",
   "failedToDeleteServerTryAgain": "Échec de la suppression du serveur. Veuillez réessayer.",
   "failedToDeleteTorrent": "Échec de la suppression du torrent",
   "failedToLoadServers": "Échec du chargement des serveurs. Veuillez réessayer.",
-  "failedToLoadStatistics": "Échec du chargement des statistiques",
   "statisticsLoadError": "Impossible de charger les statistiques pour le moment. Veuillez réessayer plus tard.",
   "statisticsNetworkError": "Problème de connexion réseau. Veuillez vérifier votre connexion Internet et réessayer.",
   "statisticsDataError": "Impossible de traiter les données de statistiques. Veuillez actualiser et réessayer.",
@@ -122,13 +108,10 @@
   "fileSize": "Taille du fichier",
   "files": "Fichiers",
   "filesChecked": "Fichiers vérifiés",
-  "filter": "Filtrer",
   "filters": "Filtres",
   "firstTorrentAdded": "Premier Torrent Ajouté",
   "forceStart": "Démarrage Forcé",
-  "french": "Français",
   "generalInformation": "Informations Générales",
-  "german": "Allemand",
   "headerKey": "Clé d'En-tête",
   "headerKeyCannotContainColons": "La clé d'en-tête ne peut pas contenir de deux-points",
   "headerKeyRequired": "La clé d'en-tête est requise",
@@ -137,10 +120,8 @@
   "headersPreview": "Aperçu des En-têtes",
   "hidePassword": "Masquer le mot de passe",
   "high": "Élevé",
-  "highContrastDark": "Contraste Élevé Sombre",
   "highContrastDarkTheme": "Contraste Élevé Sombre",
   "highContrastDarkThemeDescription": "Thème sombre à contraste élevé pour une meilleure accessibilité",
-  "highContrastLight": "Contraste Élevé Clair",
   "highContrastLightTheme": "Contraste Élevé Clair",
   "highContrastLightThemeDescription": "Thème clair à contraste élevé pour une meilleure accessibilité",
   "hostIpAddress": "Hôte/Adresse IP",
@@ -150,7 +131,6 @@
   "invalidHostAddress": "Adresse d'hôte invalide",
   "invalidPort": "Port invalide (1-65535)",
   "invalidProtocolFormat": "Format de protocole invalide",
-  "language": "Langue",
   "languageChangedTo": "Langue changée en",
   "lastConnected": "Dernière connexion :",
   "lastServerNeedToAddNew": "Ceci est votre dernier serveur. Vous devrez ajouter un nouveau serveur pour continuer.",
@@ -159,9 +139,6 @@
   "leeches": "Leeches",
   "lightTheme": "Thème Clair",
   "lightThemeDescription": "Thème clair propre et lumineux",
-  "limitDownloadRate": "Limiter la vitesse de téléchargement",
-  "limitUploadRate": "Limiter la vitesse de téléversement",
-  "loading": "Chargement...",
   "logs": "Journaux",
   "manageServers": "Gérer les Serveurs",
   "manual": "Manuel",
@@ -190,7 +167,6 @@
   "normal": "Normal",
   "notAvailable": "Non disponible",
   "notConnectedToQBittorrent": "Non connecté à qBittorrent",
-  "ok": "OK",
   "oledTheme": "Thème OLED",
   "oledThemeDescription": "Thème noir véritable pour les écrans OLED",
   "operationFailed": "Opération échouée",
@@ -210,8 +186,6 @@
   "torrentFilePreselected": "Fichier torrent présélectionné depuis l'app Fichiers",
   "torrentFileDetected": "Fichier torrent détecté et présélectionné",
   "failedToSwitchServer": "Échec du changement de serveur",
-  "allApiCallsFailed": "Tous les appels API ont échoué",
-  "unableToLoadStatisticsData": "Tous les appels API ont échoué - impossible de charger les données de statistiques",
   "pleaseCheckInternetConnection": "Veuillez vérifier votre connexion internet et réessayer.",
   "pausedTorrents": "Torrents en Pause",
   "peakDownloadSpeed": "Vitesse de Pointe de Téléchargement",
@@ -233,19 +207,16 @@
   "progress": "Progrès",
   "protocolDetectedAutomatically": "Le protocole (http:// ou https://) sera détecté automatiquement",
   "qbittorrentVersion": "qBittorrent",
-  "queued": "En file",
   "queuedIoJobs": "Travaux I/O en File",
   "quickStats": "Statistiques Rapides",
   "ratio": "Ratio",
   "readCacheHits": "Succès du Cache de Lecture",
   "readCacheOverload": "Surcharge du Cache de Lecture",
   "recheck": "Vérifier",
-  "refresh": "Actualiser",
   "refreshInterval": "Intervalle d'Actualisation",
   "refreshTorrents": "Actualiser les torrents",
   "reload": "Recharger",
   "rememberPasswordForFutureConnections": "Mémoriser le mot de passe pour les futures connexions",
-  "remove": "Retirer",
   "rename": "Renommer",
   "renameTorrent": "Renommer torrent",
   "required": "Requis",
@@ -253,10 +224,8 @@
   "resume": "Reprendre",
   "retry": "Réessayer",
   "save": "Enregistrer",
-  "saveFilesToLocation": "Enregistrer les fichiers dans l'emplacement",
   "savePassword": "Enregistrer le mot de passe",
   "savePath": "Chemin de Sauvegarde",
-  "search": "Rechercher",
   "searchTorrents": "Rechercher des torrents...",
   "seeders": "Seeders",
   "seeding": "Partage",
@@ -270,14 +239,12 @@
   "sequentialDownload": "Téléchargement Séquentiel",
   "serverDeleted": "supprimé",
   "serverDeletedReplacementSet": "supprimé. défini comme auto-connexion",
-  "serverList": "Liste des Serveurs",
   "serverName": "Nom du Serveur",
   "serverNameHint": "ex., NAS domestique",
   "serverNameOptional": "Nom du serveur (optionnel)",
   "serverSetAsAutoConnect": "est configuré en auto-connexion. Veuillez sélectionner un serveur de remplacement avant de supprimer:",
   "servers": "Serveurs",
   "sessionWaste": "Gaspillage de Session",
-  "setAsAutoConnect": "Définir comme Auto-Connexion",
   "setPriority": "Définir Priorité",
   "settings": "Paramètres",
   "shareRatio": "Ratio de Partage",
@@ -301,21 +268,14 @@
   "size": "Taille",
   "skip": "Ignorer",
   "skipHashCheck": "Ignorer la vérification de hachage",
-  "sort": "Trier",
   "sortAndFilter": "Trier et Filtrer",
   "sortBy": "Trier par:",
-  "spanish": "Espagnol",
-  "speed": "Vitesse",
-  "stalled": "Bloqué",
-  "start": "Démarrer",
   "startTorrent": "Démarrer Torrent",
   "state": "État",
   "statistics": "Statistiques",
   "stats": "Statistiques",
   "status": "Statut",
-  "stop": "Arrêter",
   "stopCondition": "Condition d'arrêt",
-  "success": "Succès",
   "successfullyAddedTorrents": "Torrent(s) ajouté(s) avec succès",
   "successfullyDeleted": "Supprimé avec succès {count} torrents",
   "successfullyPaused": "Pausé avec succès {count} torrents",
@@ -323,7 +283,6 @@
   "switchServer": "Changer de Serveur",
   "systemTheme": "Thème Système",
   "systemThemeDescription": "Suit le thème système de votre appareil",
-  "tags": "Étiquettes",
   "tapAddServerBelowToConnect": "Appuyez sur \"Ajouter Serveur\" ci-dessous pour vous connecter à votre premier serveur qBittorrent.",
   "tapToConnectLongPressOptions": "Appuyez pour vous connecter. Appuyez longuement pour les options.",
   "technicalInformation": "Informations Techniques",
@@ -351,7 +310,6 @@
   "torrentRenamedSuccessfully": "Torrent renommé avec succès",
   "torrentStatus": "Statut du Torrent",
   "torrentUrls": "URLs Torrent",
-  "torrents": "Torrents",
   "total": "Total",
   "totalBufferSize": "Taille Totale du Buffer",
   "totalLeechers": "Total des Leechers",
@@ -360,9 +318,7 @@
   "totalSize": "Taille Totale",
   "totalTorrents": "Total des Torrents",
   "totalWasted": "Total Gaspillé",
-  "tracker": "Tracker",
   "trackers": "Trackers",
-  "transferInfo": "Informations de Transfert",
   "transferInformation": "Informations de Transfert",
   "transferSpeeds": "Vitesses de Transfert",
   "transferStatistics": "Statistiques de Transfert",
@@ -375,7 +331,6 @@
   "uploadSpeed": "Vitesse de Téléversement",
   "uploadSpeedAvg": "Vitesse de Téléversement (Moy.)",
   "uploaded": "Téléversé",
-  "uploads": "Téléversements",
   "urls": "URLs",
   "useHttps": "Utiliser HTTPS",
   "username": "Nom d'utilisateur",
@@ -400,5 +355,24 @@
   "sortFilter": "Trier",
   "errorHandlingTorrentLink": "Erreur lors de la gestion du lien torrent",
   "failedToProcessTorrentFile": "Échec du traitement du fichier torrent",
-  "switchingToServer": "Changement vers"
+  "switchingToServer": "Changement vers",
+  "unknownErrorOccurred": "Une erreur inconnue s'est produite",
+  "connectionTimedOutMessage": "Connexion expirée. Veuillez vérifier :\n• Votre connexion internet\n• L'URL du serveur est correcte\n• Le serveur qBittorrent fonctionne\n• Le port est accessible",
+  "networkErrorMessage": "Erreur réseau. Veuillez vérifier :\n• Votre connexion internet\n• L'URL du serveur et le port\n• qBittorrent fonctionne et est accessible",
+  "cannotFindServerMessage": "Impossible de trouver le serveur. Veuillez vérifier :\n• L'URL du serveur est correcte\n• Votre connexion internet\n• Essayez d'utiliser l'adresse IP au lieu du nom d'hôte",
+  "sslTlsErrorMessage": "Erreur de connexion SSL/TLS. Veuillez vérifier :\n• Utilisez https:// pour les connexions sécurisées\n• Utilisez http:// pour les connexions non sécurisées\n• Le certificat du serveur est valide",
+  "authenticationFailedMessage": "Authentification échouée. Veuillez vérifier :\n• Le nom d'utilisateur et mot de passe sont corrects\n• Vous avez la permission d'accéder à qBittorrent\n• L'authentification est activée dans les paramètres qBittorrent",
+  "serverNotFoundMessage": "Serveur non trouvé. Veuillez vérifier :\n• L'URL du serveur est correcte\n• qBittorrent fonctionne\n• L'interface web est activée dans les paramètres qBittorrent",
+  "serverErrorMessage": "Erreur serveur. Veuillez vérifier :\n• qBittorrent fonctionne correctement\n• Essayez de redémarrer qBittorrent\n• Vérifiez les journaux qBittorrent pour les erreurs",
+  "invalidUrlFormatMessage": "Format d'URL invalide. Veuillez vérifier :\n• L'URL commence par http:// ou https://\n• Le numéro de port est correct (ex., :8080)\n• Pas d'espaces supplémentaires ou caractères spéciaux",
+  "requestTimedOutMessage": "Demande expirée. Veuillez vérifier :\n• Votre connexion internet\n• Le serveur répond\n• Réessayez dans quelques instants",
+  "connectionErrorMessage": "Erreur de connexion. Veuillez vérifier :\n• L'URL du serveur et le port sont corrects\n• qBittorrent fonctionne\n• Votre connexion internet",
+  "connectionFailedMessage": "Connexion échouée. Veuillez vérifier :\n• L'URL du serveur et le port sont corrects\n• Le nom d'utilisateur et mot de passe sont corrects\n• qBittorrent fonctionne et est accessible\n• Votre connexion internet",
+  "connectionFailed": "Connexion échouée",
+  "connectionTimedOut": "Connexion expirée",
+  "authenticationFailed": "Authentification échouée",
+  "serverNotFound": "Serveur non trouvé",
+  "networkError": "Erreur réseau",
+  "cannotFindServer": "Impossible de trouver le serveur",
+  "requestTimedOut": "Demande expirée"
 }
